# attention_hri

./: .gitignore
src/attention_hri/: CMakeLists.txt  package.xml  setup.py
src/attention_hri/launch/: hri_attention.launch
src/attention_hri/scripts/: behaviour_manager.py  feed_behaviour.py  moving_object.py
src/attention_hri/scripts/attention_hri/: object_model.py  saliency_prediction.py  utility.py
