<?xml version="1.0"?>
<package format="2">
  <name>attention_hri</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="natnaelargaw@gmail.com">natnael</maintainer>

  <license>TODO</license>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>message_generation</depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
	<buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
